--- a/src/Service/gmis.Application/gmis.Application.csproj
+++ b/src/Service/gmis.Application/gmis.Application.csproj
@@ -34,6 +34,12 @@
     <ProjectReference Include="..\gmis.Shared\gmis.Shared.csproj" />
   </ItemGroup>
 
+ 
+
+  <ItemGroup>
+    <Folder Include="Features\Notes\Command\" />
+  </ItemGroup>
+
 
 
 </Project>
