--- a/src/Service/gmis.API/gmis.API.csproj
+++ b/src/Service/gmis.API/gmis.API.csproj
@@ -30,8 +30,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\gmis.Application\gmis.Application.csproj" />
-    <ProjectReference Include="..\gmis.Infrastructure\gmis.Infrastructure.csproj" />
+    <ProjectReference Include="..\gmis.Application\GMIS.Application.csproj" />
+    <ProjectReference Include="..\gmis.Infrastructure\GMIS.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
