--- a/src/Service/gmis.Domain/gmis.Domain.csproj
+++ b/src/Service/gmis.Domain/gmis.Domain.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\gmis.Shared\gmis.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Common\CommonDto\" />
+  </ItemGroup>
+
 </Project>
